<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MeasurementActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_mea"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white">
                <ImageButton
                    android:id="@+id/btn_back_child"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/back"
                    android:background="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/discussion"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_measurement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/measurement"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/boy"
                app:layout_constraintBottom_toBottomOf="@+id/tv_child_name"
                app:layout_constraintEnd_toStartOf="@+id/tv_child_name"
                app:layout_constraintTop_toTopOf="@+id/tv_child_name"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:id="@+id/tv_child_name"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/david"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.8" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/bottom"
                app:layout_constraintBottom_toBottomOf="@+id/tv_measurement"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_measurement"
                app:layout_constraintVertical_bias="1.0" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_measurement"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_measurement">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/weight" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/height" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_head"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/head" />
            </com.google.android.material.tabs.TabLayout>
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_below="@id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>